Fix text overflow ellipsis not showing in bottom player

--- a/client/src/styles/player.module.css
+++ b/client/src/styles/player.module.css
@@ -85,9 +85,21 @@
 .nowPlaying {
   text-align: center;
   flex: 1;
+  overflow: hidden;
+  display: flex;
+  align-items: flex-start;
+}
+
+.titleWrapper {
+  flex: 1;
+  width: 75%;
+}
+
+.titleWrapper > div {
+  max-width: 100%;
+  overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  overflow: hidden;
 }
 
 .nowPlayingArtist {
